docs: Enhance Node.js standalone deployment documentation
- Add Hono server integration example with full CRUD operations
- Expand Prerequisites section with system requirements and verification steps
- Add comprehensive Error Handling and Logging section
  - Specific error type handling (NotFoundError, ETagMismatchError)
  - Custom logging with Winston
  - Graceful shutdown implementation with active request tracking
- Enhance Storage Configuration section
  - Add directory permissions guidance
  - Expand configuration options reference
  - Document ParqueDB initialization options
- Add extensive Advanced Topics section
  - Custom storage paths and multi-tenant setup
  - Multi-database configurations
  - Backup strategies (file-based, application-level, point-in-time recovery)
  - Performance tuning (connection pooling, query caching, bulk operations, read replicas)
- Add comprehensive Security Best Practices section
  - File system permissions and user setup
  - Input validation with Zod
  - Authentication and authorization with JWT
  - Rate limiting
  - Encryption at rest
  - Audit logging
  - Environment variables management
- Enhance Troubleshooting section
  - Performance degradation and compaction
  - TypeScript errors
  - Port conflicts
  - Firewall issues
- Add Migration Guide section
  - MongoDB to ParqueDB migration
  - SQL to ParqueDB mapping
  - Data import from JSON/CSV

Addresses issue parquedb-mz5h.19

--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
     "hyparquet": "github:dot-do/hyparquet#variant-shredding",
     "hyparquet-compressors": "^1.1.1",
     "hyparquet-writer": "github:dot-do/hyparquet-writer#variant-shredding",
+    "jose": "^6.1.3",
     "oauth.do": "^0.2.6",
     "pluralize": "^8.0.0",
     "snappyjs": "^0.7.0",
